--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-h1 {color: white;
-    font: 
+body {
+    background-image: https://images-assets.nasa.gov/image/as11-44-6550/as11-44-6550~medium.jpg
 }
 .centered {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-.container {
-    position: relative;
-    text-align: center;
-    color: white;
-  }
+}
+h1 {color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 64px;
+}
