--- a/style.css
+++ b/style.css
@@ -1,13 +1,57 @@
-body {
-    background-image: https://images-assets.nasa.gov/image/as11-44-6550/as11-44-6550~medium.jpg
-}
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-h1 {color: white;
+
+h1 {
+    color: white;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 64px;
+    
+}
+h2 {
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+h3 {font-size: 8pt;
+    color:white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+}
+header { 
+    width: 850px;
+    height: 450px;
+    background-image: url("earthrise.jpg");
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    margin-bottom: 10px;
+}
+main { 
+    background-color: darkgrey;
+    display: flex;
+    justify-content: space-around;
+    height: 324px;
+    width: 850px;
+    font-family: 'Exo 2', sans-serif;
+    
+}
+.contact-stuff {
+    height: 270px;
+    width: 270px;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+      
+
+}
+
+.socialmedia {
+    display: flex;
+    flex-direction: column;    
+    margin: 50px;
+}
+
+img {
+    height: 30px;
 }
