--- a/style.css
+++ b/style.css
@@ -47,11 +47,15 @@ main {
 }
 
 .socialmedia {
+    width: 250px;
     display: flex;
-    flex-direction: column;    
-    margin: 50px;
+    flex-direction: row; 
+    justify-content: space-evenly;   
+    margin: 20px;
+    padding: 20px;
 }
 
 img {
-    height: 30px;
+    height: 20px;
+    margin: 5px;
 }
